--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             
         <!-- end header top bar -->
         <!-- start navigation -->
-         <nav class="navbar navbar-expand-lg header-light bg-gradient-white-transparent header-reverse glass-effect h-20">
+         <nav class="navbar navbar-expand-lg bg-gradient-white-transparent header-reverse h-20">
             <div class="container-fluid">
                 <div class="col-auto col-lg-3 me-lg-0 me-auto h-100">
                     <a class="navbar-brand" href="index.html">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="default-logo">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="alt-logo">
-                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="mobile-logo"> 
+                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="mobile-logo h-45px"> 
                     </a>
                 </div>
                 <div class="col-auto ms-auto md-ms-0 menu-order position-static">
