--- a/kontakt.html
+++ b/kontakt.html
@@ -27,7 +27,7 @@
             
         <!-- end header top bar -->
         <!-- start navigation -->
-         <nav class="navbar navbar-expand-lg bg-gradient-white-transparent header-reverse glass-effect h-150px">
+         <nav class="navbar navbar-expand-lg bg-gradient-white-transparent header-reverse h-150px">
             <div class="container-fluid">
                 <div class="col-auto col-lg-3 me-lg-0 me-auto h-100">
                     <a class="navbar-brand" href="index.html">
