--- a/kontakt.html
+++ b/kontakt.html
@@ -81,12 +81,12 @@
     <div class="container w-100 no-padd">
         <div class="">
             <div class="justify-content-center">
-                <div class="heading w-80 left dark ">
+                <div class="heading w-80 text-center left dark ">
                     <h2 class="title fw-100 text-gradient-gold">KONTAKTUJTE MĚ</h2>
                     <div class="content mb-6">
                        <p>Tvořím interiéry s duší, každý prostor má svůj příběh - napište spolu se mnou ten svůj </p>
                 </div>
-                <div class="row text-center">
+                <div class="row justify-content-center text-center">
                     <div class="col-xl-3 col-md-5 col-sm-6 sm-mb-20px ">
                         <div class="column-inner">
                             <div class="adddress-block  ">
